projects/examples/source/02.03.12.cpp
////////////////////////////////////////////////////////////////////

#include <cassert>
#include <functional>
#include <vector>

////////////////////////////////////////////////////////////////////

int main()
{
	auto x = 1;

//  ----------------------------------------------------------------

//	std::vector < int & > vector_1; // error

//  ----------------------------------------------------------------

	std::vector < std::reference_wrapper < int > > vector_2 = { x };

//  ----------------------------------------------------------------

	vector_2.back().get() = 2;

//  ----------------------------------------------------------------
	
	assert(x == 2);
}

////////////////////////////////////////////////////////////////////